Corrected unregistration + extra swag
