# directory/docs/swagger.json
@@ -315,6 +315,12 @@
                             "$ref": "#/definitions/models.Error"
                         }
                     },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -359,6 +365,12 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/models.Error"
                         }
@@ -515,6 +527,33 @@
                 ],
                 "summary": "Lists Nym mixnodes and gateways on the network alongside their reputation, such that the reputation is at least 100.",
                 "operationId": "getActiveTopology",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Topology"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/mixmining/topologyremoved": {
+            "get": {
+                "description": "On Nym nodes startup they register their presence indicating they should be alive.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "mixmining"
+                ],
+                "summary": "Lists Nym mixnodes and gateways on the network that got removed due to bad service provided.",
+                "operationId": "getRemovedTopology",
                 "responses": {
                     "200": {
                         "description": "OK",
